--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ body {
     width: 1000px;
     display: flex;
     justify-content: space-evenly;
-    margin: 0px 0px 0px 150px;
+    margin: auto;
 }
 .content > .features > .column {
     padding: 20px;
@@ -210,7 +210,7 @@ body {
 .form {
     background-color: white;
     box-sizing: border-box;
-    margin-left: 520px;
+    margin: auto;
     max-width: 300px;
     padding: 30px;
     opacity: 0.9;
@@ -279,6 +279,39 @@ label {
 .user-finance-details a {
     text-decoration: none;
     color: black;
+}
+
+/* Add these styles to your existing CSS */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.modal > .modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+}
+.modal > .modal-content > .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.modal > .modal-content > .close:hover,
+.modal > .modal-content > .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 
