git commit -m "added focus"

--- a/styles/header-info.css
+++ b/styles/header-info.css
@@ -33,7 +33,7 @@
     text-decoration: none;
     padding: 30px 20px;
 }
-.links-bar > .hlinks li a:hover, .links-bar > .hlinks li a:focus {
+.links-bar > .hlinks li a:hover, .links-bar > .hlinks li a.active {
     background-color: #3baf6b;
 }
 .links-bar > .logout li {
