--- a/styles/header.css
+++ b/styles/header.css
@@ -43,6 +43,6 @@
     text-decoration: none;
     padding: 30px 20px;
 }
-.links-bar > .hlinks li a:hover, .links-bar > .hlinks li a:focus {
+.links-bar > .hlinks li a:hover, .links-bar > .hlinks li a.active {
     background-color: #3baf6b;
 }
